--- a/resume.html
+++ b/resume.html
@@ -21,9 +21,9 @@
     <img src="images/headshot.jpg" alt="Nithin Agarwal's headshot" width="20%">
 
     <h1>Nithin Agarwal</h1>
-    <h4>Senior UX, Mobile App, Website Software Engineer</h4>
+    <h4>Im an Front end developer</h4>
 
-    <p>Email: <a href="mailto:nithinagarwal7862@gmail.com" target="_blank">harrisonkong@skyroute66.com</a></p>
+    <p>Email: <a href="mailto:nithinagarwal7862@gmail.com" target="_blank">nithinagarwal7862@gmail.com</a></p>
     <!-- don't post physical address, personal phone number or other personal information on the web! -->
 
     <h2>Portfolio</h2>
@@ -34,22 +34,21 @@
     <h3>GITAM University</h3>
     <h4>Computer Science, CGPA 7.67</h4>
 
-    <h2>Professional Experiences</h2>
+    <h2>Courses Done</h2>
 
-    <h3>Subject Matter Expert / Online Instructor</h3>
-    <h4>Coursera, Mountain View, CA</h4>
-    <h5>March 2020 - Present</h5>
+    <h3>Web design for everybody</h3>
+    <h4>Coursera</h4>
+    <h5>June2020 - July 2020</h5>
       <ul>
-        <li>Create interactive online IT courses</li>
-        <li>Teach students worldwide</li>
+        <li>Built My Portfolio</li>
+        <li>Built a Product Landing Page</li>
       </ul>
 
-    <h3>Founder, Software Engineer</h3>
-    <h4>skyRoute66, Los Angeles, CA</h4>
-    <h5>January 2019 - Present</h5>
+    <h3>Front End Developer</h3>
+    <h4>Hyderabad,India</h4>
       <ul>
-        <li>Author and publish mobile apps, reusable iOS UI modules</li>
-        <li>Independent computer service contractor</li>
+        <li>Proficient In C,C++</li>
+        <li>familiar with Python</li>
       </ul>
   </body>
 
